# b24pysdk

./: .dockerignore  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  AI-DEV-README.md  AI-README.md  AI-SCOPES-CREATION-README.md  AI-SCOPES-DOC-CREATION-README.md  AI-SCOPES-TEST-CREATION-README.md  DEV-RUN-TEST-README.md  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: 2_feature_request_sdk.yaml  3_bug_report_rest_api.yaml  4_feature_request_rest_api.yaml  5_ship_release.yaml
.github/workflows/: ci.yml
b24pysdk/: __init__.py  __main__.py  _bitrix_api_batch_response.py  _bitrix_api_request.py  _bitrix_api_response.py  _client.py  _config.py  _constants.py  _version.py  client.py  error.py  version.py
b24pysdk/api/callers/: _base_caller.py  _utils.py  call.py  call_batch.py  call_batches.py  call_list.py  call_list_fast.py  call_method.py
b24pysdk/api/requesters/: __init__.py  _base_requester.py  bitrix_api_requester.py  bitrix_oauth_requester.py
b24pysdk/api/requests/: __init__.py  abstract_bitrix_api_request.py  bitrix_api_base_request.py  bitrix_api_batch_request.py  bitrix_api_list_request.py  bitrix_api_raw_request.py  bitrix_api_request.py  bitrix_api_value_request.py
b24pysdk/api/responses/: __init__.py  abstract_bitrix_response.py  bitrix_api_batch_response.py  bitrix_api_list_response.py  bitrix_api_response.py  bitrix_api_value_response.py  bitrix_app_info_response.py  bitrix_time_response.py
b24pysdk/bitrix_api/: __init__.py  bitrix_app.py  bitrix_token.py  config.py  oauth_requester.py
b24pysdk/bitrix_api/classes/: __init__.py  bitrix_api_batch_request.py  bitrix_api_batch_response.py  bitrix_api_list_request.py  bitrix_api_request.py  bitrix_api_response.py  bitrix_api_response_time.py
b24pysdk/bitrix_api/credentials/: __init__.py  bitrix_app.py  bitrix_token.py  oauth_event_data.py  oauth_placememt_data.py  oauth_placement_data.py  oauth_token.py  oauth_workflow_data.py  renewed_oauth_token.py
b24pysdk/bitrix_api/events/: base_bitrix_event.py  oauth_token_renewed_event.py  portal_domain_changed_event.py
b24pysdk/bitrix_api/functions/: __init__.py  _base_caller.py  api_call.py  batch_api_call.py  bitrix_api_client.py  call.py  call_batch.py  call_batches.py  call_list.py  call_list_fast.py  call_method.py  call_with_retries.py  convert_params.py  parse_response.py
b24pysdk/bitrix_api/protocols/: __init__.py  bitrix_oauth_protocol.py  bitrix_token_protocol.py
b24pysdk/bitrix_api/requesters/: __init__.py  _base_requester.py  bitrix_api_requester.py  bitrix_oauth_requester.py  oauth_requester.py
b24pysdk/bitrix_api/requests/: __init__.py  abstract_bitrix_api_request.py  bitrix_api_batch_request.py  bitrix_api_list_request.py  bitrix_api_request.py  bitrix_base_api_request.py
b24pysdk/bitrix_api/responses/: __init__.py  bitrix_api_batch_response.py  bitrix_api_list_response.py  bitrix_api_response.py  bitrix_api_time_response.py  bitrix_app_info_response.py
b24pysdk/bitrix_api/signals/: __init__.py
b24pysdk/constants/: __init__.py  ai.py  biconnector.py  crm.py  event.py  im.py  imbot.py  landing.py  messageservice.py  rpa.py  sale.py  socialnetwork.py  sonet_group.py  tasks.py  telephony.py  timeman.py  user.py  userfield.py  version.py  vote.py
b24pysdk/credentials/: __init__.py  _app_info_cache.py  auth.py  bitrix_app.py  bitrix_token.py  oauth_event_data.py  oauth_placement_data.py  oauth_token.py  oauth_workflow_data.py
b24pysdk/credentials/_utils/: parse_flattened_keys.py
b24pysdk/error/: __init__.py  _http_response.py  v3.py
b24pysdk/errors/: __init__.py  _http_responses.py  oauth.py  v3.py
b24pysdk/events/: __init__.py  base_bitrix_event.py  oauth_token_renewed_event.py  portal_domain_changed_event.py
b24pysdk/integrations/: __init__.py
b24pysdk/integrations/django/: README.md  __init__.py  types.py
b24pysdk/integrations/fastapi/: README.md  __init__.py  types.py
b24pysdk/integrations/flask/: README.md  __init__.py  dependencies.py  types.py
b24pysdk/log/: __init__.py  abstract_logger.py  base_logger.py  null_logger.py  stream_logger.py
b24pysdk/protocols/: __init__.py  bitrix_oauth_protocol.py  bitrix_token_protocol.py
b24pysdk/schemas/: _base_listable_schema.py  _base_schema.py  _base_schema_dict.py  _unbind_schema.py  access.py  api.py  app.py  error.py  event.py  feature.py  method.py  placement.py  profile.py  results.py  time.py
b24pysdk/schemas/crm/: activity.py  calllist.py  entity.py  enum.py  field.py  orderentity.py  requisite.py  status_entity.py  userfield.py  vat.py
b24pysdk/scopes/: __init__.py  _base_context.py  _base_entity.py  _base_scope.py  access.py  base.py  department.py  events.py  feature.py  mailservice.py  method.py  placement.py  profile.py  scope.py  server.py  timeman.py  userfieldconfig.py  userfieldtype.py
b24pysdk/scopes/_v3/: __init__.py  documentation.py
b24pysdk/scopes/ai_admin/: __init__.py  engine.py  prompt.py
b24pysdk/scopes/app/: __init__.py  option.py
b24pysdk/scopes/biconnector/: __init__.py  _base_biconnector.py  _base_biconnector_entity.py  connector.py  (+2 more)
b24pysdk/signals/: bitrix_signal.py
b24pysdk/utils/: converters.py  dataclasses.py  encoding.py  enum.py  functional.py  type_vars.py  types.py
docker/: ci.Dockerfile  dev.Dockerfile  test.Dockerfile
instructions/: AI-PROMPT-NEW-SCOPE-DOCUMENTATION.md  AI-PROMPT-NEW-SCOPES.md  AI-PROMPT-SCOPES-CREATION.md  AI-PROMPT-SCOPES-DOC-CREATION.md  AI-PROMPT-SCOPES-METHOD-EXAMPLES.md
instructions/guides/: AI-SCHEMAS-CREATION-GUIDE.md  AI-SCOPES-CREATION-GUIDE.md
instructions/prompts/: AI-PROMPT-SCOPES-CREATION.md  AI-PROMPT-SCOPES-DOC-CREATION.md
tests/: README.md  conftest.py  constants.py  env_config.py  error.py  test_bitrix_api_request.py  test_bitrix_api_response_time.py  test_client_batching.py
tests/application_bridge/: index.html  index.py
tests/integration/: conftest.py  helpers.py  test_crm_deal_fields.py  test_error.py  test_error_oauth.py  test_user_current.py
tests/unit/: examples.py  test_client_supported_api_methods.py
(+746 files in other folders)
