[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "b24pysdk"
version = "0.2.3a1"
authors = [
  { name = "Bitrix24", email = "pypi@bitrixsoft.com" }
]
description = "An official Python library for the Bitrix24 REST API"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["bitrix24", "rest", "api"]
classifiers = []

dependencies = [
    "psygnal>=0.14.1,<1.0",
    "requests>=2.32.4,<3",
    "uuid6>=2025.0.0,<2026.0.0",
]

[project.urls]
Homepage = "https://github.com/bitrix24/b24pysdk"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff==0.12.1",
]
test = [
    "environs>=11.0.0",
    "fastapi",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-dependency>=0.5.1",
    "pytest-mock>=3",
    "python-multipart",
    "uvicorn",
    "fastapi[standard]"
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 300
target-version = "py39"
exclude = ["build", "dist", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "ARG",
    "B",     # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE",   # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C",
    "C4",
    "C90",
    "COM",   # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "DTZ",
    "E",
    "F",
    "FLY",
    "G",
    "I",
    "INP",
    "INT",
    "ISC",
    "LOG",
    "N",
    "Q",
    "PERF",
    "PIE",
    "PGH",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "S",     # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM",
    "SLOT",
    "T",
    "TD",
    "TID",
    "TRY",
    "YTT",
]

ignore = [
    "B009",
    "C408",
    "E501",
    "N805",     # https://docs.astral.sh/ruff/rules/invalid-first-argument-name-for-method
    "N818",     # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name
    "PLC0415",
    "PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "RET505",   # https://docs.astral.sh/ruff/rules/superfluous-else-return
    "SIM108",   # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp
    "T201",
    "TID252",   # https://docs.astral.sh/ruff/rules/relative-imports
    "TRY003",   # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
    "TRY301",   # https://docs.astral.sh/ruff/rules/raise-within-try/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "access: mark a test as related to access operations",
    "crm: mark a test as related to crm operations",
    "crm_deal: mark a test as related to crm.deal operations",
    "department: mark a test as related to department operations",
    "events: mark a test as related to events operations",
    "feature: mark a test as related to feature operations",
    "integration: marks tests that hit real Bitrix24 API (deselect with -m 'not integration')",
    "method",
    "oauth_only: mark test to run only if OAuth credentials are available",
    "placement: mark a test as related to placement operations",
    "profile: mark a test as related to profile operations",
    "server: mark a test as related to server operations",
    "scope",
    "unit",
    "user: mark a test as related to user operations",
    "user_option: mark a test as related to user option operations",
    "user_userfield: mark a test as related to user userfield operations",
]
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]