[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "b24pysdk"
version = "1.0.0"
authors = [
    { name = "Bitrix24", email = "pypi@bitrixsoft.com" }
]
description = "An official Python library for the Bitrix24 REST API"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["bitrix24", "rest", "api"]
classifiers = []

dependencies = [
    "psygnal>=0.14.1,<1.0",
    "requests>=2.32.4,<3",
    "uuid6>=2025.0.0,<2026.0.0",
]

[project.urls]
Homepage = "https://github.com/bitrix24/b24pysdk"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff==0.15.8",
]
test = [
    "environs>=11.0.0",
    "fastapi[standard]",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-dependency>=0.5.1",
    "pytest-mock>=3",
    "python-multipart",
    "uvicorn",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 300
target-version = "py39"
exclude = ["build", "dist", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "ARG", # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE", # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C", # https://docs.astral.sh/ruff/rules/#mccabe-c
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90", # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "DTZ", # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E", # https://docs.astral.sh/ruff/rules/#pycodestyle-e
    "EXE", # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FLY", # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "ICN", # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "INP", # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "INT", # https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PIE", # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PL", # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PLC", # https://docs.astral.sh/ruff/rules/#convention-plc
    "PLE", # https://docs.astral.sh/ruff/rules/#error-ple
    "PLR", # https://docs.astral.sh/ruff/rules/#refactor-plr
    "PLW", # https://docs.astral.sh/ruff/rules/#warning-plw
    "PT", # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI", # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-ruf
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "TD", # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY", # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "W", # https://docs.astral.sh/ruff/rules/#warning-w
    "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]

ignore = [
    "B009", # https://docs.astral.sh/ruff/rules/get-attr-with-constant/
    "C408", # https://docs.astral.sh/ruff/rules/unnecessary-collection-call/
    "N805", # https://docs.astral.sh/ruff/rules/invalid-first-argument-name-for-method/
    "N818", # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "RET505", # https://docs.astral.sh/ruff/rules/superfluous-else-return/
    "SIM108", # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
    "T201", # https://docs.astral.sh/ruff/rules/print/
    "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "access: mark a test as related to access operations",
    "activity",
    "ai_admin: mark a test as related to ai_admin operations",
    "ai_admin_engine: mark a test as related to ai.engine operations",
    "app",
    "app_option",
    "crm_automatedsolution",
    "credentials: mark unit tests related to credentials models and helpers",
    "bitrix_api_batch",
    "b24_api_batch_result",
    "bitrix_api_batch_response",
    "bitrix_api_list",
    "bitrix_api_list_response",
    "bitrix_api_list_fast_response",
    "bitrix_app_info",
    "b24_app_info_result",
    "b24_app_info_install_result",
    "bitrix_app_info_response",
    "bitrix_api_response",
    "bitrix_api_request",
    "bitrix_api_list_request",
    "bitrix_api_list_fast_request",
    "bitrix_api_batch_request",
    "bitrix_api_batches_request",
    "bitrix_api_requester",
    "bitrix_oauth_requester",
    "bitrix_time_response",
    "bizproc",
    "crm: mark a test as related to crm operations",
    "crm_activity",
    "crm_activity_badge",
    "crm_activity_binding",
    "crm_activity_communication",
    "crm_activity_configurable",
    "crm_activity_layout_blocks",
    "crm_activity_only", # for running crm.activity only
    "crm_activity_type",
    "crm_address",
    "crm_calllist: mark a test as related to crm.calllist operations",
    "crm_calllist_items: mark a test as related to crm.calllist.items operations",
    "crm_category",
    "crm_company: mark a test as related to crm.company operations",
    "crm_company_configuration",
    "crm_company_contact",
    "crm_company_userfield",
    "crm_contact",
    "crm_contact_configuration",
    "crm_currency: mark a test as related to crm.currency operations",
    "crm_currency_base: mark a test as related to crm.currency.base operations",
    "crm_currency_localizations: mark a test as related to crm.currency.localizations operations",
    "crm_deal: mark a test as related to crm.deal operations",
    "crm_deal_configuration",
    "crm_deal_contact",
    "crm_deal_productrows",
    "crm_deal_recurring",
    "crm_deal_userfield",
    "crm_lead",
    "crm_lead_configuration",
    "crm_lead_contact",
    "crm_lead_productrows",
    "crm_lead_userfield",
    "crm_multifield",
    "crm_quote",
    "crm_stagehistory",
    "crm_type",
    "department: mark a test as related to department operations",
    "dependency: mark tests using pytest-dependency ordering",
    "disk",
    "documentgenerator",
    "documentgenerator_document",
    "entity: mark a test as related to entity operations",
    "entity_item: mark a test as related to entity item operations",
    "entity_section: mark a test as related to entity section operations",
    "errors",
    "errors_oauth",
    "event: mark a test as related to event operations",
    "event_offline",
    "events: mark a test as related to events operations",
    "feature: mark a test as related to feature operations",
    "folder",
    "integration: marks tests that hit real Bitrix24 API (deselect with -m 'not integration')",
    "im: mark a test as related to im operations",
    "im_counters: mark a test as related to im.counters operations",
    "im_revision: mark a test as related to im.revision operations",
    "method",
    "mailservice: mark a test as related to mailservice operations",
    "messageservice: mark a test as related to messageservice operations",
    "messageservice_sender: mark a test as related to messageservice.sender operations",
    "rpa: mark a test as related to rpa operations",
    "rpa_type: mark a test as related to rpa.type operations",
    "oauth_only: mark test to run only if OAuth credentials are available",
    "webhook_only: mark test to run only if Webhook credentials are available",
    "placement: mark a test as related to placement operations",
    "profile: mark a test as related to profile operations",
    "pull: mark a test as related to pull operations",
    "pull_application_event: mark a test as related to pull.application.event operations",
    "pull_application_push: mark a test as related to pull.application.push operations",
    "pull_application_config: mark a test as related to pull.application.config operations",
    "requests",
    "requesters",
    "responses",
    "robot",
    "auth_data: mark tests for auth data models",
    "oauth_event_data: mark tests for OAuth event payload models",
    "server: mark a test as related to server operations",
    "salescenter: mark a test as related to salescenter operations",
    "salescenter_payment: mark a test as related to salescenter.payment operations",
    "pay_system: mark a test as related to pay_system operations",
    "sale: mark a test as related to sale operations",
    "sale_paysystem: mark a test as related to sale.paysystem operations",
    "landing: mark a test as related to landing operations",
    "landing_demos: mark a test as related to landing.demos operations",
    "socialnetwork: mark a test as related to socialnetwork operations",
    "socialnetwork_api_workgroup: mark a test as related to socialnetwork.api.workgroup operations",
    "sign: mark a test as related to sign operations",
    "sign_b2e: mark a test as related to sign.b2e operations",
    "vote: mark a test as related to vote operations",
    "vote_attached_vote: mark a test as related to vote.attached_vote operations",
    "vote_integration_im: mark a test as related to vote.integration.im operations",
    "imconnector: mark a test as related to imconnector operations",
    "imconnector_chat_name: mark a test as related to imconnector.chat.name operations",
    "imconnector_connector_data: mark a test as related to imconnector.connector.data operations",
    "imconnector_delete: mark a test as related to imconnector.delete operations",
    "imconnector_send: mark a test as related to imconnector.send operations",
    "imconnector_send_status: mark a test as related to imconnector.send.status operations",
    "imconnector_update: mark a test as related to imconnector.update operations",
    "biconnector: mark a test as related to biconnector operations",
    "biconnector_connector: mark a test as related to biconnector.connector operations",
    "biconnector_dataset: mark a test as related to biconnector.dataset operations",
    "biconnector_source: mark a test as related to biconnector.source operations",
    "lists: mark a test as related to lists operations",
    "lists_get: mark a test as related to lists.get operations",
    "lists_section: mark a test as related to lists.section operations",
    "lists_field: mark a test as related to lists.field operations",
    "lists_element: mark a test as related to lists.element operations",
    "calendar: mark a test as related to calendar operations",
    "calendar_accessibility: mark a test as related to calendar.accessibility operations",
    "calendar_event: mark a test as related to calendar.event operations",
    "calendar_meeting_status: mark a test as related to calendar.meeting.status operations",
    "calendar_resource: mark a test as related to calendar.resource operations",
    "calendar_resource_booking: mark a test as related to calendar.resource.booking operations",
    "calendar_section: mark a test as related to calendar.section operations",
    "calendar_settings: mark a test as related to calendar.settings operations",
    "calendar_user_settings: mark a test as related to calendar.user.settings operations",
    "catalog: mark a test as related to catalog operations",
    "catalog_enum: mark a test as related to catalog.enum operations",
    "sonet_group: mark a test as related to sonet_group operations",
    "sonet_group_feature: mark a test as related to sonet_group.feature operations",
    "sonet_group_user: mark a test as related to sonet_group.user operations",
    "scope",
    "storage",
    "telephony: mark a test as related to telephony operations",
    "telephony_call: mark a test as related to telephony.call operations",
    "telephony_external_call: mark a test as related to telephony.externalCall operations",
    "telephony_external_line: mark a test as related to telephony.externalLine operations",
    "timeman: mark a test as related to timeman operations",
    "timeman_networkrange: mark a test as related to timeman.networkrange operations",
    "timeman_schedule: mark a test as related to timeman.schedule operations",
    "timeman_timecontrol_report: mark a test as related to timeman.timecontrol.report operations",
    "timeman_timecontrol_reports_settings: mark a test as related to timeman.timecontrol.reports.settings operations",
    "timeman_timecontrol_reports_users: mark a test as related to timeman.timecontrol.reports.users operations",
    "timeman_timecontrol_settings: mark a test as related to timeman.timecontrol.settings operations",
    "unit",
    "user: mark a test as related to user operations",
    "userconsent: mark a test as related to userconsent operations",
    "userconsent_agreement: mark a test as related to userconsent.agreement operations",
    "userconsent_consent: mark a test as related to userconsent.consent operations",
    "userfieldconfig: mark a test as related to userfieldconfig operations",
    "user_option: mark a test as related to user option operations",
    "user_userfield: mark a test as related to user userfield operations",
    "voximplant: mark a test as related to voximplant operations",
    "voximplant_statistic: mark a test as related to voximplant.statistic operations",
]
testpaths = [
    "tests",
]
python_files = ["test_*.py", "*_test.py"]
