[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "b24pysdk"
version = "1.2.1"
authors = [
    { name = "Bitrix24", email = "pypi@bitrixsoft.com" }
]
description = "An official Python library for the Bitrix24 REST API"
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["bitrix24", "rest", "api"]
classifiers = []

dependencies = [
    "requests>=2.31.0,<3",
    "uuid6>=2021.11.29; python_version < '3.14'",
]

[project.urls]
Homepage = "https://github.com/bitrix24/b24pysdk"

[project.optional-dependencies]
signals = [
    "psygnal>=0.14.1,<1.0",
]
django = [
    "Django>=4.2,<7",
]
fastapi = [
    "fastapi>=0.110,<1",
    "python-multipart>=0.0.6",
]
flask = [
    "Flask>=2.3,<4",
]
dev = [
    "pre-commit",
    "ruff==0.15.20",
]
test = [
    "environs>=11.0.0",
    "fastapi[standard]",
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-dependency>=0.5.1",
    "pytest-mock>=3",
    "psygnal>=0.14.1,<1.0",
    "python-multipart",
    "uvicorn",
]

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.ruff]
line-length = 300
target-version = "py39"
exclude = ["build", "dist", ".venv", "__pycache__"]

[tool.ruff.lint]
select = [
    "ARG", # https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    "B", # https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "BLE", # https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    "C", # https://docs.astral.sh/ruff/rules/#mccabe-c
    "C4", # https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "C90", # https://docs.astral.sh/ruff/rules/#mccabe-c90
    "COM", # https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "DJ", # https://docs.astral.sh/ruff/rules/#flake8-django-dj
    "DTZ", # https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "E", # https://docs.astral.sh/ruff/rules/#pycodestyle-e
    "EXE", # https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    "F", # https://docs.astral.sh/ruff/rules/#pyflakes-f
    "FLY", # https://docs.astral.sh/ruff/rules/#flynt-fly
    "FURB", # https://docs.astral.sh/ruff/rules/#refurb-furb
    "G", # https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "I", # https://docs.astral.sh/ruff/rules/#isort-i
    "ICN", # https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "INP", # https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "INT", # https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "ISC", # https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "LOG", # https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "N", # https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "Q", # https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "PERF", # https://docs.astral.sh/ruff/rules/#perflint-perf
    "PIE", # https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "PGH", # https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PL", # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PLC", # https://docs.astral.sh/ruff/rules/#convention-plc
    "PLE", # https://docs.astral.sh/ruff/rules/#error-ple
    "PLR", # https://docs.astral.sh/ruff/rules/#refactor-plr
    "PLW", # https://docs.astral.sh/ruff/rules/#warning-plw
    "PT", # https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "PTH", # https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    "PYI", # https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "RET", # https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "RSE", # https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RUF", # https://docs.astral.sh/ruff/rules/#ruff-specific-ruf
    "S", # https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    "SIM", # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLOT", # https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "T", # https://docs.astral.sh/ruff/rules/#flake8-debugger-t
    "TC", # https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "TD", # https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TID", # https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TRY", # https://docs.astral.sh/ruff/rules/#tryceratops-try
    "W", # https://docs.astral.sh/ruff/rules/#warning-w
    "YTT", # https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
]

ignore = [
    "B009", # https://docs.astral.sh/ruff/rules/get-attr-with-constant/
    "C408", # https://docs.astral.sh/ruff/rules/unnecessary-collection-call/
    "N805", # https://docs.astral.sh/ruff/rules/invalid-first-argument-name-for-method/
    "N818", # https://docs.astral.sh/ruff/rules/error-suffix-on-exception-name/
    "PLR0913", # https://docs.astral.sh/ruff/rules/too-many-arguments/
    "RET505", # https://docs.astral.sh/ruff/rules/superfluous-else-return/
    "SIM108", # https://docs.astral.sh/ruff/rules/if-else-block-instead-of-if-exp/
    "T201", # https://docs.astral.sh/ruff/rules/print/
    "TID252", # https://docs.astral.sh/ruff/rules/relative-imports/
    "TRY003", # https://docs.astral.sh/ruff/rules/raise-vanilla-args/
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
quote-style = "double"